# payer-agent-audit

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yml  .zenodo.json  ARCHITECTURE.md  AUTONOMY_LADDER.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  DOI-PLAN.md  FAILURE-MODES.md  LICENSE  LICENSE-APACHE  LICENSING.md  LIMITATIONS.md  MANIFEST.in  NEGATIVE-USE-CASES.md  NOTICE  README.md  SECURITY.md  WORKED_EXAMPLE.md  action.yml  pyproject.toml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  gitleaks.yml  publish.yml
docs/: ASSURANCE-CATALOG.md  PYPI_TRUSTED_PUBLISHING_SETUP.md  RESEARCH_NOTES_internal.md  TRADEMARK.md
examples/: __init__.py  quickstart_um_timeliness.py  worked_example.py
scripts/: banned_term_lint.py  mutation_check.py  no_internal_notes_lint.py  tamper_language_lint.py
src/payer_agent_audit/: __init__.py  _normalize.py  cli.py
src/payer_agent_audit/agents/: __init__.py
src/payer_agent_audit/governance/: __init__.py  audit_chain.py  autonomy_ladder.py  defcon.py  effective_challenge_harness.py  sovereign_veto.py  witness_anchor.py
src/payer_agent_audit/payer/: __init__.py  appeal_iro.py  clinician_of_record.py  funding_type.py  um_timeliness.py
src/payer_agent_audit/schemas/: __init__.py  audit_event.py
tests/: golden_corpus.py  test_boundary_scan.py  test_cli.py  test_examples.py  test_golden_corpus.py  test_hardening_round3.py  test_payer_controls.py  test_primitives_units.py  test_property_based.py
tests/adversarial/: test_al_probes.py
