[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["payer_agent_audit*"]
exclude = ["tests*", "scripts*", "docs*", "examples*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
payer_agent_audit = ["py.typed"]

[project]
name = "payer-agent-audit"
version = "0.1.0"
description = "Governance patterns for autonomous AI agents in health-insurance / payer operations (aligned to the NAIC Model Bulletin framework)"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Kunjar Bhaduri", email = "130852583+linus10x@users.noreply.github.com" }
]
keywords = [
    "ai-governance",
    "autonomous-agents",
    "health-insurance",
    "payer",
    "utilization-management",
    "prior-authorization",
    "regulated-ai",
    "audit-trail",
    "naic",
    "erisa",
    "cms",
    "human-in-the-loop",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = []  # Zero runtime dependencies

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "ruff>=0.8",
    "pre-commit>=3.7",
]
# Property-based fuzz harness. Kept separate from `dev` so the standard CI
# matrix stays minimal; hypothesis is a test-time dependency only and the
# stdlib-only runtime posture is preserved.
test-property = ["hypothesis>=6.115"]
# CI-side security tooling (SAST + SCA). Installed only on the bandit /
# pip-audit workflow runners so day-to-day contributor envs stay lean.
security-dev = [
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]
# Mutation-testing harness (spine §7 mutation pass). Opt-in; not in the
# default CI matrix.
mutation = ["mutmut>=2.5"]

[project.scripts]
payer-audit = "payer_agent_audit.cli:main"

[project.urls]
Homepage = "https://github.com/linus10x/payer-agent-audit"
Repository = "https://github.com/linus10x/payer-agent-audit"
Issues = "https://github.com/linus10x/payer-agent-audit/issues"
Changelog = "https://github.com/linus10x/payer-agent-audit/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"examples/*" = ["ANN"]
"schemas/*" = ["ANN"]
"patterns/*" = ["ANN"]
"scripts/*" = ["ANN", "SIM", "N816"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "network: tests that hit external network; default-skipped unless PAYER_AUDIT_NETWORK_TESTS=1",
    "slow: long-running tests (e.g. hypothesis fuzz harnesses); skipped via `-m 'not slow'` for fast local iteration",
]

[tool.coverage.run]
source = ["src/payer_agent_audit", "examples"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mutmut]
# Mutation pass (spine §7). The reliable, src-layout-safe harness is
# `scripts/mutation_check.py` (run: `python3 scripts/mutation_check.py`) — it
# applies targeted operator/boundary/boolean mutations one at a time and
# reports the kill score. (mutmut 3.x's repo-copy runner mishandles this
# src-layout; the in-place harness is the canonical mutation pass here.)
paths_to_mutate = [
    "src/payer_agent_audit/governance/defcon.py",
    "src/payer_agent_audit/governance/autonomy_ladder.py",
    "src/payer_agent_audit/payer/funding_type.py",
    "src/payer_agent_audit/payer/um_timeliness.py",
]
